# app/Http/Controllers/CustomerStakeController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Http\Resources\RaffleDrawsResource;
+use App\Http\Resources\RaffleResource;
 use App\Http\Resources\StakeResource;
 use App\Http\Resources\WinningTagsResource;
 use App\Models\Categories;
@@ -17,6 +18,7 @@ use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use App\Models\WinningTags;
 use Illuminate\Support\Carbon;
+use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Str;
 
 
@@ -55,14 +57,14 @@ class CustomerStakeController extends Controller
             "category_id" => "required",
             "winning_tag_id" => "required"
         ]);
-        $stakes = StakePlatform::where("is_close", 0)->where("category_id", $request->get("category_id"))->where("winning_tags_id", $request->get("winning_tag_id"))->get();
+        $stakes = StakePlatform::where("is_close", 0)->where("category_id", $request->get("category_id"))->where("winning_tags_id", $request->get("winning_tag_id"))->with("winningTags")->with("categories")->get();
         return $utils->message("success", $stakes, 200);
 
     }
 
     /**
      * @OA\Get (
-     *     path="/api/v1/customer/get-stake-history",
+     *     path="/api/v1/customer/raffles/all",
      *     summary="Get Stake History",
      *     tags={"Mobile"},
      *     @OA\Parameter(
@@ -88,10 +90,69 @@ class CustomerStakeController extends Controller
         if(!Stake::where("user_id", $request->get("user_id"))->exists())
             return $utils->message("success", "User Not Found", 200);
 
-        $stakes = Stake::where("user_id", $request->get("user_id"))->get();
+        $stakes = DB::table("customers_stakes")
+            ->join("winning_tags", "customers_stakes.winning_tags_id", "=", "winning_tags.id")
+            ->join("categories", "customers_stakes.category_id", "=", "categories.id")
+            ->join("stake_platforms", "customers_stakes.stake_platform_id", "=", "stake_platforms.id")
+            ->select(
+                "customers_stakes.ticket_id",
+                "customers_stakes.created_at",
+                "customers_stakes.month",
+                "customers_stakes.year",
+                "winning_tags.name AS winning_tag_name",
+                "categories.name AS category_name",
+            )
+            ->get();
         return $utils->message("success", $stakes, 200);
 
     }
+    /**
+     * @OA\Get (
+     *     path="/api/v1/customer/raffles/active",
+     *     summary="Get Stake History",
+     *     tags={"Mobile"},
+     *     @OA\Parameter(
+     *         name="user_id",
+     *         in="query",
+     *         description="id of the user",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(response="200", description="Get Stake Items"),
+     *     @OA\Response(response="401", description="Invalid credentials"),
+     *     @OA\Response(response="404", description="Not Found"),
+     *     @OA\Response(response="422", description="validation Error", @OA\JsonContent())
+     *
+     * )
+     */
+    public function getActiveStakeHistory(Request $request, Utils $utils)
+    {
+        $request->validate([
+            "user_id" => "required"
+        ]);
+
+        if(!Stake::where("user_id", $request->get("user_id"))->exists())
+            return $utils->message("success", "User Not Found", 404);
+
+        $stakes = DB::table("customers_stakes")
+                    ->join("winning_tags", "customers_stakes.winning_tags_id", "=", "winning_tags.id")
+                    ->join("categories", "customers_stakes.category_id", "=", "categories.id")
+                    ->join("stake_platforms", "customers_stakes.stake_platform_id", "=", "stake_platforms.id")
+                    ->where("stake_platforms.is_close", 0)
+                    ->where("stake_platforms.is_open", 1)
+                    ->select(
+                        "customers_stakes.ticket_id",
+                        "customers_stakes.created_at",
+                        "customers_stakes.month",
+                        "customers_stakes.year",
+                        "winning_tags.name AS winning_tag_name",
+                        "categories.name AS category_name",
+                    )
+                    ->get();
+        return $utils->message("success", $stakes, 200);
+    }
+
+
     /**
      * @OA\Get (
      *     path="/api/v1/customer/dashboard",
@@ -191,6 +252,7 @@ class CustomerStakeController extends Controller
         $request->request->add(["month" => $data[1]]);
         $request->request->add(["start_day" => $data[2]]);
         $request->request->add(["stake_id" => Str::random(10)]);
+        $request->request->add(["is_open" => 1]);
         $data =  StakePlatform::create($request->all());
         return $utils->message("success", $data, 200);
 
@@ -206,9 +268,31 @@ class CustomerStakeController extends Controller
      *     @OA\Response(response="401", description="Invalid credentials")
      * )
      */
-    public function index(Request $request, Utils $utils): JsonResponse
+    public function index(Request $request, Utils $utils)
     {
-        $Stake = StakeResource::collection(Stake::with(["winningTags", "categories"])->orderBy("created_at", "DESC")->get());
+      $data =   DB::table("stake_platforms")
+                ->join("customers_stakes", "stake_platforms.id", "=", "customers_stakes.stake_platform_id")
+                ->join("winning_tags", "winning_tags.id", "=", "customers_stakes.winning_tags_id")
+                ->join("categories", "categories.id", "=", "customers_stakes.category_id")
+                ->select(
+                  'categories.name AS category_name',
+                  "stake_platforms.month",
+                  "stake_platforms.year",
+                  "customers_stakes.win",
+                  "winning_tags.name",
+                  "customers_stakes.stake_platform_id",
+                  "customers_stakes.stake_price",
+                  'customers_stakes.ticket_id',
+                  'customers_stakes.created_at',
+                  'customers_stakes.stake_number',
+                  'customers_stakes.payment_method',
+                  'customers_stakes.stake_number',
+              )
+              ->where("stake_platforms.is_open", 0)
+              ->where("stake_platforms.is_close", 1)
+              ->get();
+
+        $Stake = StakeResource::collection($data);
         $winningTags = WinningTags::all();
         $total = Stake::sum("stake_price");
         $data = [
@@ -277,8 +361,27 @@ class CustomerStakeController extends Controller
      *     @OA\Parameter(
      *         name="payment_method",
      *         in="query",
-     *         description="Payment Method(card or credit)",
+     *         description="Payment Method(card or wallet)",
      *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="stake_platform_id",
+     *         in="query",
+     *         description="",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="trx_ref",
+     *         in="query",
+     *         description="Transaction Ref from flutterwave",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="customer_id",
+     *         in="query",
+     *         description="Id of the customer",
      *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="200", description="Get Dashboard Items"),
@@ -292,6 +395,7 @@ class CustomerStakeController extends Controller
 //        return Carbon::now();
 
         $stake_number = $request->get("stake_number");
+        $stake_platform_id = $request->get("stake_platform_id");
         $request->validate([
             'user_id' => 'required|max:191',
             'category_id' => 'required|max:191',
@@ -302,23 +406,17 @@ class CustomerStakeController extends Controller
             'winning_tags_id' => 'required|integer',
             'payment_method' => 'required'
         ]);
-        if(!StakePlatform::where("category_id", $request->get("category_id"))->where("winning_tags_id",  $request->get("winning_tags_id"))->where("month", $request->get("month"))->where("year", $request->get("year"))->where("is_open", 1)->exists())
-            return $utils->message("error", "Platform is not open yet", 401);
+        if(!StakePlatform::where("id",$stake_platform_id)->where("is_open", 1)->where("is_close", 0)->exists())
+            return $utils->message("error", "Platform is not open yet", 422);
 
         if (!User::where("id", $request->get("user_id"))->exists())
             return $utils->message("error", "User Does not Exist", 404);
 
-        if ($stake_number == $request->stake_number)
-                $win = 1;
-            else
-                $win = 0;
-        $stake_platform_id = StakePlatform::where("category_id", $request->get("category_id"))->where("winning_tags_id",  $request->get("winning_tags_id"))->where("month", $request->get("month"))->where("year", $request->get("year"))->where("is_open", 1)->value("id");
-
-         $win_number = StakePlatform::where("category_id", $request->get("category_id"))->where("winning_tags_id",  $request->get("winning_tags_id"))->where("month", $request->get("month"))->where("year", $request->get("year"))->value("win_nos");
+         $win_number = StakePlatform::where("id", $request->get("stake_platform_id"))->value("win_nos");
 
          if($win_number == $request->stake_number){
              $win = 1;
-             $stake_platform = StakePlatform::findOrFail($stake_platform_id);
+             $stake_platform = StakePlatform::findOrFail($request->get("stake_platform_id"));
              $stake_platform->count_winners += 1;
              $stake_platform->update();
          } else{
@@ -330,7 +428,7 @@ class CustomerStakeController extends Controller
          $customer_balance = NewCustomer::where("user_id", $request->get("user_id"))->value("wallet");
          $price = WinningTags::where("id", $request->get("winning_tags_id"))->value("stake_price");
 
-         if($request->get("payment_method") == "credit"){
+         if($request->get("payment_method") == "wallet"){
              if($customer_balance >= $price){
                  $balance =  $customer_balance - $price;
                  if ($customer_balance >= $price){
@@ -355,8 +453,8 @@ class CustomerStakeController extends Controller
 
         $Stake = new Stake;
         $Stake->user_id = $request->user_id;
+        $Stake->customer_id = $request->customer_id;
         $Stake->ticket_id = $ticket_id;
-        $Stake->sub_cat_id = $request->sub_cat_id;
         $Stake->stake_price = $request->stake_price;
         $Stake->stake_number = $request->stake_number;
         $Stake->win = $win;
@@ -372,6 +470,7 @@ class CustomerStakeController extends Controller
 
         $transactionHistory = new CustomerTransactionHistory;
         $transactionHistory->user_id = $request->get("user_id");
+        $transactionHistory->customer_id = $request->get("customer_id");
         $transactionHistory->payment_method = $request->get("payment_method");
         $transactionHistory->amount = $price;
         $transactionHistory->transaction_type = "Debit";
